--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 # Core MCP dependencies
-fastmcp>=2.6.1
 mcp>=1.9.2
+fastmcp>=2.10
+starlette>=0.36
+uvicorn>=0.30
+
+
 
 # HTTP and API requests
 requests>=2.32.3
