--- a/boltic.yaml
+++ b/boltic.yaml
@@ -5,6 +5,7 @@ entrypoint: "serverless_app.py"
 build:
   builtin: python
   version: "3.11"
+  builder: "gcr.io/buildpacks/builder:v1"
 
 env:
   PORT: "8080"
