--- a/boltic.yaml
+++ b/boltic.yaml
@@ -1,5 +1,5 @@
-app: facebook-ads-library-mcp
-region: asia-south1
+app: "facebook-ads-library-mcp"
+region: "asia-south1"
 entrypoint: "serverless_app.py"
 
 build:
