--- a/boltic.yaml
+++ b/boltic.yaml
@@ -3,8 +3,7 @@ region: "asia-south1"
 entrypoint: "serverless_app.py"
 
 build:
-  builtin: python
-  version: "3.11"
+  dockerfile: ./Dockerfile
 
 env:
   PORT: "8080"
