--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ fastmcp>=2.10
 starlette>=0.36
 uvicorn>=0.30
 
-
-
 # HTTP and API requests
 requests>=2.32.3
 httpx>=0.28.1
@@ -21,12 +19,11 @@ numpy>=1.24.0
 
 # Environment and configuration
 python-dotenv>=1.1.0
-pydantic>=2.11.5
-pydantic-settings>=2.9.1
+pydantic<2.0                     # <<< CHANGED: pin to <2.0 for Config syntax compatibility >>>
+pydantic-settings>=2.0,<2.3      # <<< CHANGED: ensure works with pydantic v1 >>>
 
 # Async support
-asyncio
-aiohttp>=3.8.0
+aiohttp>=3.8.0                   # <<< CHANGED: removed asyncio (stdlib, not installable) >>>
 
 # Text processing and NLP
 regex>=2023.12.25
