--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ numpy>=1.24.0
 # Environment and configuration
 python-dotenv>=1.1.0
 pydantic<2.0                     # <<< CHANGED: pin to <2.0 for Config syntax compatibility >>>
-pydantic-settings>=2.0,<2.3      # <<< CHANGED: ensure works with pydantic v1 >>>
+pydantic-settings<2.0     # <<< CHANGED: ensure works with pydantic v1 >>>
 
 # Async support
 aiohttp>=3.8.0                   # <<< CHANGED: removed asyncio (stdlib, not installable) >>>
